--- a/Lesson Notebooks/04-Pandas-Exercises/04-Ecommerce Purchases Exercise - Solutions.ipynb
+++ b/Lesson Notebooks/04-Pandas-Exercises/04-Ecommerce Purchases Exercise - Solutions.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
     "\n",
-    "<a href='http://www.pieriandata.com'> <img src='../../Pierian_Data_Logo.png' /></a>\n",
-    "___\n",
     "# Ecommerce Purchases Exercise - Solutions\n",
     "\n",
     "In this Exercise you will be given some Fake Data about some purchases done through Amazon! Just go ahead and follow the directions and try your best to answer the questions and complete the tasks. Feel free to reference the solutions. Most of the tasks can be solved in different ways. For the most part, the questions get progressively harder.\n",
@@ -89,7 +86,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>16629 Pace Camp Apt. 448\\nAlexisborough, NE 77...</td>\n",
+       "      <td>16629 Pace Camp Apt. 448\\r\\nAlexisborough, NE ...</td>\n",
        "      <td>46 in</td>\n",
        "      <td>PM</td>\n",
        "      <td>Opera/9.56.(X11; Linux x86_64; sl-SI) Presto/2...</td>\n",
@@ -106,7 +103,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9374 Jasmine Spurs Suite 508\\nSouth John, TN 8...</td>\n",
+       "      <td>9374 Jasmine Spurs Suite 508\\r\\nSouth John, TN...</td>\n",
        "      <td>28 rn</td>\n",
        "      <td>PM</td>\n",
        "      <td>Opera/8.93.(Windows 98; Win 9x 4.90; en-US) Pr...</td>\n",
@@ -123,7 +120,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Unit 0065 Box 5052\\nDPO AP 27450</td>\n",
+       "      <td>Unit 0065 Box 5052\\r\\nDPO AP 27450</td>\n",
        "      <td>94 vE</td>\n",
        "      <td>PM</td>\n",
        "      <td>Mozilla/5.0 (compatible; MSIE 9.0; Windows NT ...</td>\n",
@@ -140,7 +137,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7780 Julia Fords\\nNew Stacy, WA 45798</td>\n",
+       "      <td>7780 Julia Fords\\r\\nNew Stacy, WA 45798</td>\n",
        "      <td>36 vm</td>\n",
        "      <td>PM</td>\n",
        "      <td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_0 ...</td>\n",
@@ -157,7 +154,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>23012 Munoz Drive Suite 337\\nNew Cynthia, TX 5...</td>\n",
+       "      <td>23012 Munoz Drive Suite 337\\r\\nNew Cynthia, TX...</td>\n",
        "      <td>20 IE</td>\n",
        "      <td>AM</td>\n",
        "      <td>Opera/9.58.(X11; Linux x86_64; it-IT) Presto/2...</td>\n",
@@ -178,11 +175,11 @@
       ],
       "text/plain": [
        "                                             Address    Lot AM or PM  \\\n",
-       "0  16629 Pace Camp Apt. 448\\nAlexisborough, NE 77...  46 in       PM   \n",
-       "1  9374 Jasmine Spurs Suite 508\\nSouth John, TN 8...  28 rn       PM   \n",
-       "2                   Unit 0065 Box 5052\\nDPO AP 27450  94 vE       PM   \n",
-       "3              7780 Julia Fords\\nNew Stacy, WA 45798  36 vm       PM   \n",
-       "4  23012 Munoz Drive Suite 337\\nNew Cynthia, TX 5...  20 IE       AM   \n",
+       "0  16629 Pace Camp Apt. 448\\r\\nAlexisborough, NE ...  46 in       PM   \n",
+       "1  9374 Jasmine Spurs Suite 508\\r\\nSouth John, TN...  28 rn       PM   \n",
+       "2                 Unit 0065 Box 5052\\r\\nDPO AP 27450  94 vE       PM   \n",
+       "3            7780 Julia Fords\\r\\nNew Stacy, WA 45798  36 vm       PM   \n",
+       "4  23012 Munoz Drive Suite 337\\r\\nNew Cynthia, TX...  20 IE       AM   \n",
        "\n",
        "                                        Browser Info  \\\n",
        "0  Opera/9.56.(X11; Linux x86_64; sl-SI) Presto/2...   \n",
@@ -248,22 +245,24 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
       "Data columns (total 14 columns):\n",
-      "Address             10000 non-null object\n",
-      "Lot                 10000 non-null object\n",
-      "AM or PM            10000 non-null object\n",
-      "Browser Info        10000 non-null object\n",
-      "Company             10000 non-null object\n",
-      "Credit Card         10000 non-null int64\n",
-      "CC Exp Date         10000 non-null object\n",
-      "CC Security Code    10000 non-null int64\n",
-      "CC Provider         10000 non-null object\n",
-      "Email               10000 non-null object\n",
-      "Job                 10000 non-null object\n",
-      "IP Address          10000 non-null object\n",
-      "Language            10000 non-null object\n",
-      "Purchase Price      10000 non-null float64\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Address           10000 non-null  object \n",
+      " 1   Lot               10000 non-null  object \n",
+      " 2   AM or PM          10000 non-null  object \n",
+      " 3   Browser Info      10000 non-null  object \n",
+      " 4   Company           10000 non-null  object \n",
+      " 5   Credit Card       10000 non-null  int64  \n",
+      " 6   CC Exp Date       10000 non-null  object \n",
+      " 7   CC Security Code  10000 non-null  int64  \n",
+      " 8   CC Provider       10000 non-null  object \n",
+      " 9   Email             10000 non-null  object \n",
+      " 10  Job               10000 non-null  object \n",
+      " 11  IP Address        10000 non-null  object \n",
+      " 12  Language          10000 non-null  object \n",
+      " 13  Purchase Price    10000 non-null  float64\n",
       "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 664.1+ KB\n"
+      "memory usage: 1.1+ MB\n"
      ]
     }
    ],
@@ -286,7 +285,7 @@
     {
      "data": {
       "text/plain": [
-       "50.34730200000025"
+       "np.float64(50.347302)"
       ]
      },
      "execution_count": 5,
@@ -313,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "99.99"
+       "np.float64(99.99)"
       ]
      },
      "execution_count": 6,
@@ -333,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "np.float64(0.0)"
       ]
      },
      "execution_count": 7,
@@ -403,24 +402,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 30 entries, 470 to 9979\n",
+      "Index: 30 entries, 470 to 9979\n",
       "Data columns (total 14 columns):\n",
-      "Address             30 non-null object\n",
-      "Lot                 30 non-null object\n",
-      "AM or PM            30 non-null object\n",
-      "Browser Info        30 non-null object\n",
-      "Company             30 non-null object\n",
-      "Credit Card         30 non-null int64\n",
-      "CC Exp Date         30 non-null object\n",
-      "CC Security Code    30 non-null int64\n",
-      "CC Provider         30 non-null object\n",
-      "Email               30 non-null object\n",
-      "Job                 30 non-null object\n",
-      "IP Address          30 non-null object\n",
-      "Language            30 non-null object\n",
-      "Purchase Price      30 non-null float64\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Address           30 non-null     object \n",
+      " 1   Lot               30 non-null     object \n",
+      " 2   AM or PM          30 non-null     object \n",
+      " 3   Browser Info      30 non-null     object \n",
+      " 4   Company           30 non-null     object \n",
+      " 5   Credit Card       30 non-null     int64  \n",
+      " 6   CC Exp Date       30 non-null     object \n",
+      " 7   CC Security Code  30 non-null     int64  \n",
+      " 8   CC Provider       30 non-null     object \n",
+      " 9   Email             30 non-null     object \n",
+      " 10  Job               30 non-null     object \n",
+      " 11  IP Address        30 non-null     object \n",
+      " 12  Language          30 non-null     object \n",
+      " 13  Purchase Price    30 non-null     float64\n",
       "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 2.2+ KB\n"
+      "memory usage: 3.5+ KB\n"
      ]
     }
    ],
@@ -445,9 +446,10 @@
     {
      "data": {
       "text/plain": [
+       "AM or PM\n",
        "PM    5068\n",
        "AM    4932\n",
-       "Name: AM or PM, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 10,
@@ -474,12 +476,13 @@
     {
      "data": {
       "text/plain": [
-       "Interior and spatial designer    31\n",
-       "Lawyer                           30\n",
-       "Social researcher                28\n",
-       "Purchasing manager               27\n",
-       "Designer, jewellery              27\n",
-       "Name: Job, dtype: int64"
+       "Job\n",
+       "Interior and spatial designer        31\n",
+       "Lawyer                               30\n",
+       "Social researcher                    28\n",
+       "Research officer, political party    27\n",
+       "Designer, jewellery                  27\n",
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 11,
@@ -630,12 +633,13 @@
     {
      "data": {
       "text/plain": [
+       "Email\n",
        "hotmail.com     1638\n",
        "yahoo.com       1616\n",
        "gmail.com       1605\n",
        "smith.com         42\n",
        "williams.com      37\n",
-       "Name: Email, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 16,
@@ -646,6 +650,20 @@
    "source": [
     "ecom['Email'].apply(lambda x: x.split('@')[1]).value_counts().head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Hard: What are the top 5 most popular email providers/hosts (e.g. gmail.com, yahoo.com, etc...) **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -671,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
