Removed Readme, course logo, and several markdown sections from Jupyter notebooks; updated Python version in geographical plotting notebook.

--- a/Lesson Notebooks/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
+++ b/Lesson Notebooks/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
@@ -36,10 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"Hi there Sam!\""
+   ]
   },
   {
    "cell_type": "code",
@@ -67,7 +69,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "planet = \"Earth\"\n",
+    "diameter = 12742"
+   ]
   },
   {
    "cell_type": "code",
@@ -88,7 +93,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
+   ]
   },
   {
    "cell_type": "code",
@@ -109,7 +116,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}"
+   ]
   },
   {
    "cell_type": "code",
@@ -130,7 +139,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Typle is ......\n",
+    "# List is ......."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +229,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "seq = ['soup','dog','salad','cat','great']"
+   ]
   },
   {
    "cell_type": "code",
